--- a/00-starter-files/shopping-list/index.html
+++ b/00-starter-files/shopping-list/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script defer src="script.js"></script>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -47,7 +49,7 @@
       </div>
 
       <ul id="item-list" class="items">
-        <li>
+        <!-- <li>
           Apples
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
@@ -70,12 +72,10 @@
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
-        </li>
+        </li> -->
       </ul>
 
       <button id="clear" class="btn-clear">Clear All</button>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
